# vocab-mate

./: .gitignore  Cargo.toml  Dockerfile  README.md  build-native-docker-image.sh  build.gradle.kts  build.rs  docker-compose.yml  gradle.properties  micronaut-cli.yml  raw-schema.gql  settings.gradle.kts  vocab-mate.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cargo-build.yml  gradle-test.yml  gradle.yml  wranger-build.yml
config/: default.toml
frontend/.devcontainer/: Dockerfile
frontend/vocab-mate/: capacitor.config.json  ionic.config.json  package-lock.json  package.json
frontend/vocab-mate/src/: App.tsx  index.html
frontend/vocab-mate/src/components/: ExploreContainer.tsx  HomePage.tsx  WordsInputBox.stories.tsx  WordsInputBox.tsx
frontend/vocab-mate/src/pages/: Home.tsx
graphql/: query.graphql  schema.graphql
src/: api.rs  config.rs  dict.rs  main.rs  vocab.rs
src/fauna/: graphql_gen.rs  mod.rs
src/main/kotlin/github/io/: Application.kt
src/main/kotlin/github/io/vocabmate/: Application.kt  Extensions.kt
src/main/kotlin/github/io/vocabmate/domain/: Words.kt
src/main/kotlin/github/io/vocabmate/domain/questions/: Question.kt
src/main/kotlin/github/io/vocabmate/domain/vocabs/: DictionaryService.kt  Vocab.kt  VocabConfigProps.kt  VocabRepository.kt  VocabService.kt
src/main/kotlin/github/io/vocabmate/domain/words/: Vocab.kt  Word.kt  WordsService.kt
src/main/kotlin/github/io/vocabmate/infrastructure/: RapidApiConfigProps.kt  UrbanDictClient.kt  WordsApiClient.kt  WordsResponse.kt  WordsResult.kt
src/main/kotlin/github/io/vocabmate/infrastructure/fauna/: FaunaConfigProps.kt  FaunaDriverVocabCollection.kt  FaunaGraphQLVocabCollection.kt
src/main/kotlin/github/io/vocabmate/infrastructure/rapidapi/: RapidApiConfigProps.kt
src/main/kotlin/github/io/vocabmate/infrastructure/rapidapi/urbandict/: UrbanDictClient.kt
src/main/kotlin/github/io/vocabmate/infrastructure/rapidapi/wordsapi/: WordsApiClient.kt  WordsResponse.kt  WordsResult.kt
src/main/kotlin/github/io/vocabmate/interfaces/: MyController.kt  VocabController.kt  WordsController.kt
src/main/resources/: application.conf  application.yml
src/main/resources/graphql/: AllVocabsQuery.graphql  CreateVocabMutation.graphql
src/rapidapi/: mod.rs
src/test/kotlin/github/io/: VocabMateTest.kt
src/test/kotlin/github/io/vocabmate/domain/: FillInBlankOfDefinitionQuestionTest.kt
src/test/kotlin/github/io/vocabmate/domain/questions/: FillInBlankOfDefinitionQuestionTest.kt
src/test/kotlin/github/io/vocabmate/domain/vocabs/: VocabServiceTest.kt
src/test/kotlin/github/io/vocabmate/infrastructure/fauna/: FaunaDriverVocabCollectionTest.kt
v2/vocab-mate/: Cargo.toml
v2/vocab-mate/config/: default.toml
v2/vocab-mate/graphql/: query.graphql  schema.graphql
v2/vocab-mate/src/: api.rs  config.rs  dict.rs  fauna.rs  main.rs  vocab.rs
v2/vocab-mate/src/fauna/: graphql_gen.rs  mod.rs
v2/vocab-mate/src/rapidapi/: mod.rs
worker/vocab-mate/: wrangler.toml
worker/vocab-mate/.devcontainer/: Dockerfile
worker/vocab-mate/src/: configs.rs  handler.rs  lib.rs
worker/vocab-mate/src/app/: api.rs  dict.rs  mod.rs
worker/vocab-mate/src/app/fauna/: graphql_gen.rs
worker/vocab-mate/worker/: worker.js
workers/vocab-mate/: Cargo.toml
workers/vocab-mate/.devcontainer/: devcontainer.json
workers/vocab-mate/src/: lib.rs  utils.rs
workers/vocab-mate/src/app/: mod.rs  vocab.rs
workers/vocab-mate/src/app/fauna/: mod.rs
workers/vocab-mate/src/app/rapidapi/: mod.rs
