[package]
authors = ["alank976"]
edition = "2018"
name = "vocab-mate"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
chrono = {version = "0.4", features = ["serde"]}
serde = {version = "1.0", features = ["derive"]}
anyhow = "1.0"
async-trait = "0.1.50"
config = "0.11"
env_logger = "0.8"
futures = "0.3.14"
graphql_client = "0.9.0"
log = "0.4"
surf = "2.2.0"
