[package]
name = "vocab-mate"
version = "0.1.0"
authors = ["alank976"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
graphql_client = "0.9.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
anyhow = "1.0"
config = "0.11"